align fixed

--- a/style.css
+++ b/style.css
@@ -285,6 +285,9 @@ h2{
 			padding: 6px 8px 6px 12px;
 		}
 		
+		.main {
+		 margin-left: 60px; 
+		}
 		.rose{
 		 padding-left: 0px;
 		 
